[package]
name = "riglr-hyperliquid-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A suite of rig-compatible tools for interacting with Hyperliquid perpetual futures"
readme = "README.md"
keywords = ["hyperliquid", "derivatives", "futures", "ai", "agent", "blockchain", "rig"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
documentation = "https://docs.rs/riglr-hyperliquid-tools"

[lints]
workspace = true

[dependencies]
# Core riglr and rig dependencies
rig-core = { workspace = true }
riglr-core = { workspace = true  }
riglr-config = { workspace = true  }
riglr-macros = { workspace = true  }

# Async and Error Handling
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Serialization and Schema
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# Time and date
chrono = { workspace = true }

# Decimal arithmetic for precise financial calculations
rust_decimal = "1.35"

# Cryptographic operations for signing
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
ethers-core = "2.0"
ethers-signers = "2.0"

# Base64 encoding
base64 = "0.22"

# Note: Using direct HTTP API calls instead of SDK due to compilation complexity
# hyperliquid_rust_sdk = "0.6.0"

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
mockito = "1.0"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
alloy = { workspace = true }
riglr-solana-tools = { workspace = true  }