[package]
name = "riglr-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Procedural macros for riglr - reducing boilerplate when creating rig-compatible tools."
repository = "https://github.com/riglr-project/riglr"
readme = "README.md"
keywords = ["procedural-macro", "ai", "agent", "rig", "tools"]
categories = ["development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/riglr-macros"

[lib]
proc-macro = true

[dependencies]
# Proc macro dependencies
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# For parsing doc comments
heck = "0.5.0"  # For case conversion

# Riglr integration
riglr-core = { workspace = true }
schemars = "0.8"
serde_json = "1.0"

[features]
default = []

[dev-dependencies]
riglr-core = { workspace = true }
tokio-test = { workspace = true }
trybuild = { workspace = true }
schemars = { workspace = true }
# rig-core = "0.17"  # No longer needed, using riglr-core

# For testing the generated code
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }