[package]
name = "riglr-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["riglr project contributors"]
repository = "https://github.com/riglr-project/riglr"
homepage = "https://github.com/riglr-project/riglr"
description = "HTTP server for serving rig agents over REST API with Server-Sent Events"

[dependencies]
actix-web = "4"
actix-web-lab = "0.20"
actix-cors = "0.7"
rig-core = "0.17.1"
riglr-core = { path = "../riglr-core" }
riglr-solana-tools = { path = "../riglr-solana-tools" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures-util = "0.3"
async-trait = "0.1"
thiserror = "2.0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
solana-sdk = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }