[package]
name = "riglr-showcase"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Showcase application demonstrating riglr capabilities"
readme = "README.md"
keywords = ["showcase", "demo", "ai", "agent", "rig"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/riglr-showcase"

[[bin]]
name = "riglr-showcase"
path = "src/main.rs"

[dependencies]
# Core riglr and rig dependencies
rig-core = { workspace = true }
riglr-core = { workspace = true }
riglr-solana-tools = { path = "../riglr-solana-tools" }
riglr-evm-tools = { path = "../riglr-evm-tools" }
# riglr-web-tools = { path = "../riglr-web-tools" } # Temporarily disabled due to compilation issues
riglr-graph-memory = { path = "../riglr-graph-memory" }

# Async and Error Handling
tokio = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Console interaction and formatting
dialoguer = "0.11"
console = "0.16.0"
indicatif = "0.18.0"
colored = "3.0.0"

# Date and time
chrono = { workspace = true }

# Solana SDK
solana-sdk = "2.3.1"

[dev-dependencies]
tokio-test = { workspace = true }