[package]
name = "riglr-showcase"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Showcase application demonstrating riglr capabilities"
readme = "README.md"
keywords = ["showcase", "demo", "ai", "agent", "rig"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/riglr-showcase"

[[bin]]
name = "riglr-showcase"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Core riglr and rig dependencies
rig-core = { workspace = true }
riglr-core = { workspace = true  }
riglr-config = { workspace = true  }
riglr-agents = { workspace = true  }
riglr-solana-tools = { workspace = true  }
riglr-evm-tools = { workspace = true  }
riglr-web-tools = { workspace = true  }
riglr-cross-chain-tools = { workspace = true, optional = true  }
riglr-hyperliquid-tools = { workspace = true, optional = true  }
riglr-graph-memory = { workspace = true  }
riglr-web-adapters = { workspace = true, optional = true  }
riglr-streams = { workspace = true  }
riglr-events-core = { workspace = true  }

# Async and Error Handling
tokio = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9"

# CLI
clap = { workspace = true }

# Environment variables
dotenvy = { workspace = true }
envy = "0.4"

# Concurrent collections
dashmap = "6.1"

# Random number generation
fastrand = "2.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Console interaction and formatting
dialoguer = "0.11"
console = "0.16.0"
indicatif = "0.18.0"
colored = "3.0.0"

# Date and time
chrono = { workspace = true }

# Solana SDK
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }

# Additional dependencies for processors module
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }

# Authentication dependencies
jsonwebtoken = "9.0"

# Crypto / encoding
base64 = "0.22.1"
bincode = "1.3.3"
hex = "0.4"

# Blockchain client types
solana-client = { workspace = true }
alloy = { workspace = true }

# Web server dependencies for examples
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
web-server = ["riglr-web-adapters", "actix-web", "actix-cors", "futures-util"]
cross-chain = ["riglr-cross-chain-tools"]
hyperliquid = ["riglr-hyperliquid-tools"]

[dev-dependencies]
tokio-test = { workspace = true }
serial_test = "3.1"

[[example]]
name = "yield_monitor"
path = "examples/streaming/advanced/yield_monitor.rs"