[package]
name = "riglr-solana-common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
riglr-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22.1"