[package]
name = "riglr-solana-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A suite of rig-compatible tools for interacting with the Solana blockchain"
readme = "README.md"
keywords = ["solana", "ai", "agent", "blockchain", "rig"]
categories = ["cryptography::cryptocurrencies", "web-programming::api-bindings"]
documentation = "https://docs.rs/riglr-solana-tools"

[dependencies]
# Core riglr and rig dependencies
rig-core = { workspace = true }
riglr-core = { workspace = true }
riglr-macros = { workspace = true }

# Async and Error Handling
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Serialization and Schema
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Solana Dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = "7.0.0"
solana-transaction-status = "2.3.7"
solana-account-decoder = "2.3.7"

# UUID generation
uuid = "1.0"

# Base64 encoding
base64 = "0.22.1"

# Binary encoding (using 1.3.3 for Solana SDK compatibility)
bincode = "1.3.3"

# HTTP client for Jupiter
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
mockito = "1.0"

[[bench]]
name = "solana_benchmarks"
harness = false