[package]
name = "riglr-solana-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A suite of rig-compatible tools for interacting with the Solana blockchain"
readme = "README.md"
keywords = ["solana", "ai", "agent", "blockchain", "rig"]
categories = ["cryptography::cryptocurrencies", "web-programming::api-bindings"]
documentation = "https://docs.rs/riglr-solana-tools"

[lints]
workspace = true

[dependencies]
# Core riglr and rig dependencies
rig-core = { workspace = true }
riglr-core = { workspace = true }
riglr-config = { workspace = true }
riglr-macros = { workspace = true }

# Async and Error Handling
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
once_cell = "1.19"

# Serialization and Schema
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Solana Dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-system-interface = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-transaction-status = { workspace = true }
solana-account-decoder = "3.0.0"

# For EVM transaction types in TransactionSigner trait
alloy = { workspace = true }

# UUID generation
uuid = "1.0"

# Base64 encoding
base64 = "0.22.1"

# Binary encoding (using 1.3.3 for Solana SDK compatibility)
bincode = "1.3.3"

# HTTP client for Jupiter
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# Random number generation for jitter
rand = "0.8"

# Futures utilities for async streams
futures-util = "0.3"

# New dependencies for event parsing
borsh = "0.10"
hex = "0.4"
bs58 = "0.4"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
mockito = "1.0"
proptest = "1.0"
lazy_static = "1.4"
dotenvy = { workspace = true }
testcontainers = "0.24.0"
testcontainers-modules = "0.13.0"

[features]
integration-tests = []

