[package]
name = "riglr-web-adapters"
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["riglr project contributors"]
repository = "https://github.com/riglr/riglr"
homepage = "https://github.com/riglr/riglr"
description = "Framework-agnostic web adapters for riglr agents with library-first approach"

[lints]
workspace = true

[dependencies]
# Core dependencies
riglr-core = { workspace = true  }
riglr-config = { workspace = true  }
riglr-solana-tools = { workspace = true, optional = true  }
rig-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
pin-project = "1.0"
async-stream = "0.3"

# Actix-specific dependencies (optional)
actix-web = { version = "4", optional = true }
actix-web-lab = { version = "0.24.2", optional = true }

# Axum-specific dependencies (optional)
axum = { version = "0.8.4", optional = true }
tower = { version = "0.5", optional = true }
hyper = { version = "1.0", optional = true }

# Tracing
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Solana SDK for mock signers  
solana-sdk = { workspace = true }

[features]
default = ["actix", "solana-tools"]
actix = ["dep:actix-web", "dep:actix-web-lab"]
axum = ["dep:axum", "dep:tower", "dep:hyper"]
solana-tools = ["dep:riglr-solana-tools"]

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
alloy = { workspace = true }
solana-client = { workspace = true }
futures = "0.3"