[package]
name = "riglr-web-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Web-based data tools for riglr agents - Twitter, DexScreener, web search, and more"
readme = "README.md"
keywords = ["web", "api", "ai", "agent", "rig"]
categories = ["web-programming::api-bindings"]
documentation = "https://docs.rs/riglr-web-tools"

[dependencies]
# Core riglr and rig dependencies
rig-core = { workspace = true }
riglr-core = { workspace = true }
riglr-macros = { workspace = true }

# Async and Error Handling
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Serialization and Schema
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# URL handling
url = { workspace = true }

# Time and random
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }