[package]
name = "riglr-web-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Web-based data tools for riglr agents - Twitter, DexScreener, web search, and more"
readme = "README.md"
keywords = ["web", "api", "ai", "agent", "rig"]
categories = ["web-programming::api-bindings"]
documentation = "https://docs.rs/riglr-web-tools"

[lints]
workspace = true

[dependencies]
# Core riglr and rig dependencies
rig-core = { workspace = true }
riglr-core = { workspace = true }
riglr-macros = { workspace = true }

# Async and Error Handling
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Serialization and Schema
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["chrono04"] }

# HTTP client
reqwest = { workspace = true }

# URL handling
url = { workspace = true }

# Time and random
chrono = { workspace = true }
rand = "0.9.2"

# Parsing helpers
regex = "1.10"
html-escape = "0.2"
scraper = "0.18"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
wiremock = "0.6"

[[bench]]
name = "web_benchmarks"
harness = false